--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,18 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>HTML5 Boilerplate</title>
     <link rel="stylesheet" href="/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+     rel="stylesheet"
+    />
   </head>
 
   <body>
     <header>
-      <a href="/">Home</a>
+      <a href="/views/">Home</a>
+      <a href="/views/gallery.handlebars">Gallery</a>
+      <a href="/views/profil.handlebars">My Profil</a>
+      <a href="/views/login.handlebars">Login</a>
     </header>
 
     {{{body}}}
 
     <footer>
+      <h5>InConnection</h5>
       <a href="/impressum">Impressum</a>
     </footer>
   </body>
-
 </html>
