--- a/views/registration.handlebars
+++ b/views/registration.handlebars
@@ -1,13 +1,13 @@
+<h2>Registration</h2>
+
 <hr />
 
-<h2>Kontaktieren Sie uns!</h2>
+<h3>Kontaktieren Sie uns!</h3>
 
 <form>
   E-Mail:
-  <input type="email" /><br />
+  <input type="email" /><br/>
   Nachricht:
   <textarea></textarea><br />
   <input type="submit" value="Senden" />
 </form>
-
-{{> contactform}}
