--- a/views/start.handlebars
+++ b/views/start.handlebars
@@ -1,7 +1,12 @@
-<h1>Hallo Welt!</h1>
+<h1>InConnection</h1>
 
-<p>Willkommen auf meiner Website. Hier wird in Kürze eine interaktive Webapplikation entstehen. Viel Vergnügen!</p>
+<p>Mit deinen Lebensmenschen in Verbindung sein.</p>
 
-<img src="construction.gif" width="200">
+<button><a href="/views/login.handlebars">Login</a></button>
+<button><a href="/views/registration.handlebars">Registration</a></button>
 
-{{> contactform}}
+<h5>Heii, schön hast du auf diese Seite gefunden. Bei uns kannst du stehts mit
+  deinen Liebsten in Kontakt sein. Du siehst, was sie gerade machen, wie es
+  ihnen geht und kannst dich so, auch wenn du gerade nicht bei ihnen bist, mit
+  ihnen verbunden fühlen.
+</h5>
