--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,17 +7,18 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-     rel="stylesheet"
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
     />
   </head>
 
   <body>
     <header>
-      <a href="/views/">Home</a>
-      <a href="/views/gallery.handlebars">Gallery</a>
-      <a href="/views/profil.handlebars">My Profil</a>
-      <a href="/views/login.handlebars">Login</a>
+      <a href="/">Home</a>
+      <a href="/gallery">Gallery</a>
+      <a href="/profil">My Profil</a>
+      <a href="/login">Login</a>
     </header>
 
     {{{body}}}
