--- a/views/start.handlebars
+++ b/views/start.handlebars
@@ -3,7 +3,9 @@
 <p>Mit deinen Lebensmenschen in Verbindung sein.</p>
 
 <button><a href="/views/login.handlebars">Login</a></button>
-<button><a href="/views/registration.handlebars">Registration</a></button>
+<button class="registration"><a
+    href="/views/registration.handlebars"
+  >Registration</a></button>
 
 <h5>Heii, schön hast du auf diese Seite gefunden. Bei uns kannst du stehts mit
   deinen Liebsten in Kontakt sein. Du siehst, was sie gerade machen, wie es
