--- a/views/gallery.handlebars
+++ b/views/gallery.handlebars
@@ -3,8 +3,11 @@
 
 {{#posts}}
   <div class="post">
+    <div> asdfasdfasd</div>
     <small>{{timestamp}}</small>
+    <h1>{{username}}</h1>
     <h2>{{title}}</h2>
     <p>{{description}}</p>
+    <a href="/post/{{id}}">Details</a>
   </div>
 {{/posts}}
