--- a/views/gallery.handlebars
+++ b/views/gallery.handlebars
@@ -1,5 +1,5 @@
 <h2>Gallery</h2>
-<button>Create Post</button>
+<button> <a href="/new_post">Create Post</a></button>
 
 {{#posts}}
   <div class="post">
