--- a/views/start.handlebars
+++ b/views/start.handlebars
@@ -1,14 +1,14 @@
 <h1>InConnection</h1>
 
-<p>Mit deinen Lebensmenschen in Verbindung sein.</p>
+<h2>Mit deinen Lebensmenschen in Verbindung sein.</h2>
 
-<button><a href="/views/login.handlebars">Login</a></button>
+<button class="button"><a href="/views/login.handlebars">Login</a></button>
 <button class="registration"><a
-    href="/views/registration.handlebars"
+    href="/view/registration.handlebars"
   >Registration</a></button>
 
-<h5>Heii, schön hast du auf diese Seite gefunden. Bei uns kannst du stehts mit
+<p>Heii, schön hast du auf diese Seite gefunden. Bei uns kannst du stehts mit
   deinen Liebsten in Kontakt sein. Du siehst, was sie gerade machen, wie es
   ihnen geht und kannst dich so, auch wenn du gerade nicht bei ihnen bist, mit
   ihnen verbunden fühlen.
-</h5>
+</p>
