--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
   <body>
     <header>
       <a href="/">Home</a>
-      <a href="/gallery">Gallery</a>
+      <a href="/gallery" class="">Gallery</a>
       <a href="/profil">My Profil</a>
       <a href="/login">Login</a>
     </header>
