Login/Registration done and css weiter

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,12 +20,13 @@
       <a href="/profil">My Profil</a>
       <a href="/login">Login</a>
     </header>
-
-    {{{body}}}
-
+    <main>
+      {{{body}}}
+    </main>
     <footer>
       <h5>InConnection</h5>
       <a href="/impressum">Impressum</a>
     </footer>
+
   </body>
 </html>
