--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,10 @@
-<form action="/create login" method="post">
-  <input type="text" name="email" />
-  <input type="text" name="password" />
-  <input type="button" name="submit" />
+<h2>Login</h2>
+
+<form action="/login" method="POST">
+  E-Mail:
+  <input name="email" type="text" /><br />
+  Passwort:
+  <input name="passwort" type="password" /><br />
+  <input type="submit" value="Anmelden" />
 </form>
+<a href="/registration" class="button">Registrieren</a>
