--- a/views/start.handlebars
+++ b/views/start.handlebars
@@ -2,10 +2,8 @@
 
 <h2>Mit deinen Lebensmenschen in Verbindung sein.</h2>
 
-<button class="button"><a href="/views/login.handlebars">Login</a></button>
-<button class="registration"><a
-    href="/view/registration.handlebars"
-  >Registration</a></button>
+<button><a href="/login">Login</a></button>
+<button><a href="/registration">Registration</a></button>
 
 <p>Heii, schön hast du auf diese Seite gefunden. Bei uns kannst du stehts mit
   deinen Liebsten in Kontakt sein. Du siehst, was sie gerade machen, wie es
