--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,11 +21,13 @@
       <a href="/login">Login</a>
     </header>
 
-    {{{body}}}
-
+    <main>
+      {{{body}}}
+    </main>
     <footer>
       <h5>InConnection</h5>
       <a href="/impressum">Impressum</a>
     </footer>
+
   </body>
 </html>
