--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,6 +5,8 @@
   <input name="email" type="text" /><br />
   Passwort:
   <input name="passwort" type="password" /><br />
-  <input type="submit" value="Anmelden" />
+  <input class="Button-Form" type="submit" value="Anmelden" />
 </form>
-<a href="/registration" class="button">Registrieren</a>
+
+<a class="Regi" href="/registration" class="button">No Login? Create your
+  Profile here</a>
