--- a/views/registration.handlebars
+++ b/views/registration.handlebars
@@ -15,5 +15,5 @@
   <input name="email" type="text" /><br />
   Passwort:
   <input name="passwort" type="password" /><br />
-  <input type="submit" value="Registrieren" />
+  <input class="Button-Form" type="submit" value="Registrieren" />
 </form>
