--- a/views/new_post.handlebars
+++ b/views/new_post.handlebars
@@ -1,9 +1,7 @@
-<form action="/create post" method="post">
-  <input type="text" name="titel" />
-  <input type="text" name="image" />
+<form action="/create_post" enctype="multipart/form-data" method="post">
+  <input type="text" name="title" />
+  <input type="file" name="image" />
   <input type="date" name="timestamp" />
-  <input type="int" name="likes" />
   <input type="text" name="description" />
-  <input type="int" name="user_id" />
-  <input type="button" name="submit" />
+  <input type="submit" />
 </form>
