--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,10 +1,10 @@
 <h2>Login</h2>
 
 <form action="/login" method="POST">
-  E-Mail:
-  <input name="email" type="text" /><br />
-  Passwort:
-  <input name="passwort" type="password" /><br />
+
+  <input name="email" type="text" placeholder="email" /><br />
+
+  <input name="passwort" type="password" placeholder="password" /><br />
   <input class="Button-Form" type="submit" value="Anmelden" />
 </form>
 
