--- a/views/registration.handlebars
+++ b/views/registration.handlebars
@@ -1,19 +1,20 @@
 <h2>Registrieren</h2>
 
 <form action="/registration" method="POST">
-  Username:
-  <input name="username" type="text" /><br />
-  prename
-  <input name="prename" type="text" /><br />
-  name
-  <input name="name" type="text" /><br />
-  age
-  <input name="age" type="int" /><br />
-  phonenumber
-  <input name="phonenumber" type="text" /><br />
-  email
-  <input name="email" type="text" /><br />
-  Passwort:
-  <input name="passwort" type="password" /><br />
+
+  <input name="username" type="text" placeholder="username" /><br />
+
+  <input name="prename" type="text" placeholder="prename" /><br />
+
+  <input name="name" type="text" placeholder="name" /><br />
+
+  <input name="age" type="int" placeholder="age" /><br />
+
+  <input name="phonenumber" type="text" placeholder="phonenumber" /><br />
+
+  <input name="email" type="text" placeholder="email" /><br />
+
+  <input name="passwort" type="password" placeholder="password" /><br />
+
   <input class="Button-Form" type="submit" value="Registrieren" />
 </form>
