--- a/views/gallery.handlebars
+++ b/views/gallery.handlebars
@@ -10,6 +10,12 @@
       <h2>{{title}}</h2>
       <p>{{description}}</p>
       <a href="/post/{{id}}">Details</a>
+
+      <!--Likes_neu-->
+      <form action="/like/{{id}}" enctype="multipart/form-data" method="POST">
+        <input type="submit" value="liken" />
+      </form>
+
     </div>
   </div>
 {{/posts}}
