--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,7 +5,7 @@
   <input name="email" type="text" placeholder="email" /><br />
 
   <input name="passwort" type="password" placeholder="password" /><br />
-  <input class="Button-Form" type="submit" value="Anmelden" />
+  <input class="Button-Form" class="login" type="submit" value="Anmelden" />
 </form>
 
 <a class="Regi" href="/registration" class="button">No Login? Create your
