--- a/views/registration.handlebars
+++ b/views/registration.handlebars
@@ -16,5 +16,10 @@
 
   <input name="passwort" type="password" placeholder="password" /><br />
 
-  <input class="Button-Form" type="submit" value="Registrieren" />
+  <input
+    class="Button-Form"
+    class="registration"
+    type="submit"
+    value="Registrieren"
+  />
 </form>
