--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,17 +15,20 @@
 
   <body>
     <header>
-      <a href="/">Home</a>
-      <a href="/gallery" class="">Gallery</a>
-      <a href="/profil">My Profil</a>
-      <a href="/login">Login</a>
+      <a href="/"><h5>InConnection</h5></a>
+      <div>
+        <a href="/">Home</a>
+        <a href="/gallery" class="">Gallery</a>
+        <a href="/profil">My Profil</a>
+        <a href="/login">Login</a>
+      </div>
     </header>
 
     <main>
       {{{body}}}
     </main>
     <footer>
-      <h5>InConnection</h5>
+      <a href="/"><h5>InConnection</h5></a>
       <a href="/impressum">Impressum</a>
     </footer>
 
