--- a/views/new_post.handlebars
+++ b/views/new_post.handlebars
@@ -1,7 +1,7 @@
 <form action="/create_post" enctype="multipart/form-data" method="post">
   <input type="text" name="title" />
   <input type="file" name="image" />
-  <input type="date" name="timestamp" />
+  <input type="date" name="date" />
   <input type="text" name="description" />
   <input type="submit" />
 </form>
