--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,5 +8,5 @@
   <input class="Button-Form" class="login" type="submit" value="Anmelden" />
 </form>
 
-<a class="Regi" href="/registration" class="button">No Login? Create your
+<a class="Regi-Link" href="/registration" class="button">No Login? Create your
   Profile here</a>
