--- a/views/profil.handlebars
+++ b/views/profil.handlebars
@@ -9,3 +9,14 @@
     <h4>{{email}}</h4>
   </div>
 {{/users}}
+
+<!-- 26.11.2024 Posts Anzeige-->
+{{#posts}}
+  <div class="my_post">
+    <h4>{{title}}</h4>
+    <h4>{{image}}</h4>
+    <h4>{{date}}</h4>
+    <h4>{{description}}</h4>
+    <h4>{{likes}}</h4>
+  </div>
+{{/posts}}
