--- a/views/new_post.handlebars
+++ b/views/new_post.handlebars
@@ -1,3 +1,4 @@
+<!--Create post Funktion-->
 <form action="/create_post" enctype="multipart/form-data" method="post">
   <input type="text" name="title" />
   <input type="file" name="image" />
