--- a/views/profil.handlebars
+++ b/views/profil.handlebars
@@ -1,3 +1,4 @@
+<!--My Profil Anzeige-->
 <h2>My Profil</h2>
 {{#users}}
   <div class="user">
@@ -10,7 +11,7 @@
   </div>
 {{/users}}
 
-<!-- 26.11.2024 Posts Anzeige-->
+<!-- 26.11.2024 Posts Anzeige -->
 {{#posts}}
   <div class="my_post">
     <h4>{{title}}</h4>
