--- a/views/start.handlebars
+++ b/views/start.handlebars
@@ -2,8 +2,10 @@
 
 <h2>Mit deinen Lebensmenschen in Verbindung sein.</h2>
 
-<button class="buttons"><a href="/login">Login</a></button>
-<button class="buttons"><a href="/registration">Registration</a></button>
+<div class="Box-Button">
+  <button class="buttons"><a href="/login">Login</a></button>
+  <button class="buttons"><a href="/registration">Registration</a></button>
+</div>
 
 <p>Heii, schön hast du auf diese Seite gefunden. Bei uns kannst du stehts mit
   deinen Liebsten in Kontakt sein. Du siehst, was sie gerade machen, wie es
