--- a/views/profil.handlebars
+++ b/views/profil.handlebars
@@ -13,11 +13,19 @@
 
 <!-- 26.11.2024 Posts Anzeige -->
 {{#posts}}
-  <div class="my_post">
-    <h4>{{title}}</h4>
-    <h4>{{image}}</h4>
-    <h4>{{date}}</h4>
-    <h4>{{description}}</h4>
-    <h4>{{likes}}</h4>
+  <div class="post">
+    <img src="/uploads/{{image}}" alt="" />
+
+    <div class="innercontainer">
+      <small>{{date}}</small>
+      <h1>{{username}}</h1>
+      <h2>{{title}}</h2>
+      <p>{{description}}</p>
+      <a href="/post/{{id}}">Details</a>
+      <!--Likes_neu-->
+      <form action="/like/{{id}}" enctype="multipart/form-data" method="POST">
+        <input class="heart" type="image" src="/heart.png" />
+      </form>
+    </div>
   </div>
 {{/posts}}
