Create_post bug gelöst

--- a/views/new_post.handlebars
+++ b/views/new_post.handlebars
@@ -10,8 +10,8 @@
     <label>Beschreibung</label>
     <input class="create_post_input" type="text" name="description" />
     <input type="submit" />
-  </form>
+
 </div>
 </div>
 <label>Bild</label>
-    <input class="create_post_input_img" type="file" name="image" />
+    <input class="create_post_input_img" type="file" name="image" /></form>
