handlebars erstellt, news, tickets, home html rein getan, logo eingefügt, background image

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,13 +14,19 @@
   </head>
 
   <body>
-    <header>
-      <a href="/"><h5>InConnection</h5></a>
+    <header style="background-image: url('/uploads/2025-03-01-Tigers-Ajoie_news.jpg');">
+      <a href="/"><img
+          src="/uploads/Logo_SCL_Tigers.svg.png"
+          alt="SCL Tigers Logo"
+        /></a>
       <div>
         <a href="/">Home</a>
-        <a href="/gallery" class="">Gallery</a>
-        <a href="/profil">My Profil</a>
-        <a href="/login">Login</a>
+        <a href="/news" class="">News</a>
+        <a href="/spielplan">Spielplan</a>
+        <a href="/tickets">Tickets</a>
+        <a href="/aboutus">Über uns</a>
+        <a href="/stadion">Stadion</a>
+        <a href="/sclyoungtigers">SCL Young Tigers</a>
       </div>
     </header>
 
@@ -28,8 +34,13 @@
       {{{body}}}
     </main>
     <footer>
-      <a href="/"><h5>InConnection</h5></a>
-      <a href="/impressum">Impressum</a>
+      <h5>Kontakt</h5>
+      <p>SCL Tigers AG</p>
+      <p>Güterstrasse 18</p>
+      <p>Postfach</p>
+      <p>CH-3550 Langnau i.E.</p>
+      <p><a href="+41 34 408 35 35">+41 34 408 35 35</a></p>
+</p> <a href="info@scltigers.ch">info@scltigers.ch</a></p>
     </footer>
 
   </body>
