--- a/views/start.handlebars
+++ b/views/start.handlebars
@@ -1,14 +1,59 @@
-<h1>InConnection</h1>
 
-<h2>Mit deinen Lebensmenschen in Verbindung sein.</h2>
+<!-- START --------------------------------------------->
+<div class="START">
 
-<div class="Box-Button">
-  <button class="buttons"><a href="/login">Login</a></button>
-  <button class="buttons"><a href="/registration">Registration</a></button>
+  <h1>Nächste Spiele</h1>
+  <div class="Nächste-Spiele">
+    <div class="Spiel">
+      <p>14.02.2025</p>
+      <p>19:45</p>
+      <p>SCL Tigers - HC Ambri-Piotta</p>
+    </div>
+    <div class="Spiel">
+      <p>15.02.2025</p>
+      <p>19:45</p>
+      <p>Genève-Servette HC - SCL Tigers</p>
+    </div>
+    <div class="Spiel">
+      <p>22.02.2025</p>
+      <p>19:45</p>
+      <p>SCL Tigers - EHC Kloten</p>
+    </div>
+  </div>
+  <p><a href="spielplan.handlebars">zum Spielplan</a></p>
+  <a href="tickets.handlebars" class="button">Tickets</a>
+
 </div>
 
-<p>Heii, schön hast du auf diese Seite gefunden. Bei uns kannst du stehts mit
-  deinen Liebsten in Kontakt sein. Du siehst, was sie gerade machen, wie es
-  ihnen geht und kannst dich so, auch wenn du gerade nicht bei ihnen bist, mit
-  ihnen verbunden fühlen.
-</p>
+
+
+<!-- NEWS --------------------------------------------->
+<div class="NEWS">
+  <h1>News</h1>
+  <div>
+    <div>
+      <img src="" alt="" />
+      <h3>Medical Report: Stéphane Charlin fällt 6-8 Wochen aus</h3>
+    </div>
+    <div>
+      <img src="" alt="" />
+      <h3>Stellungnahme der SCL Tigers zu den Vorfällen anlässlich des Heimspiels
+        vom 31. Januar 2025 in Langnau</h3>
+    </div>
+    <div>
+      <img src="" alt="" />
+      <h3>Vierter Sieg gegen den SC Bern in dieser Saison</h3>
+    </div>
+    <div>
+      <img src="" alt="" />
+      <h3>Schläglerei artet aus. Matthias Muster wurde dreimal die Nase gebrochen.</h3>
+    </div>
+  <a href="news.handlebars" class="button">Mehr</a>
+</div>
+
+
+
+<!-- SOCIAL WALL --------------------------------------------->
+<div class="Social Wall">
+
+</div>
